[tool.poetry]
name = "cipher_xz2959"
version = "0.1.0"
description = "adding the cipher function"
authors = ["Xuanyi Zhou <xz2959@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
